--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -24,7 +24,7 @@
         <div id="navbar" class="collapse navbar-collapse">
           <ul class="nav navbar-nav">
             <li class="active"><a href="#">Home</a></li>
-            <li><a href="https://github.com/planetjekyll/jekyll-bootstrap-theme">About</a></li>
+            <li><a href="{{ repository_url }}">Contribute</a></li>
           </ul>
         </div><!--/.nav-collapse -->
       </div>
