--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -24,7 +24,8 @@
         <div id="navbar" class="collapse navbar-collapse">
           <ul class="nav navbar-nav">
             <li class="active"><a href="#">Home</a></li>
-            <li><a href="{{ repository_url }}">Contribute</a></li>
+	    <li><a href="{{ site.url }}/mailing_list.html">Mailing list</a></li>
+            <li><a href="{{ repository_url }}">Contribute to this list</a></li>
           </ul>
         </div><!--/.nav-collapse -->
       </div>
